testsuite/tests/properties/invalid_dflt_arg_val/bad_type/test.lkt
from common import FooNode

class Example: FooNode {
    @exported fun p(a: Bool=1): Bool = a
}
